[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/ComboText.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/munro-small.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="ComboText" type="Node2D"]
script = ExtResource( 1 )

[node name="DeletionTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="FadeTween" type="Tween" parent="."]

[node name="ComboLabel" type="Label" parent="."]
light_mask = 2
margin_right = 40.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "1x"
[connection signal="timeout" from="DeletionTimer" to="." method="_on_DeletionTimer_timeout"]
